--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@angular/animations": "^16.0.0",
     "@angular/common": "^16.0.0",
+    "@angular/core": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/fire": "^7.5.0",
     "@angular/forms": "^16.0.0",
