--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.21",
     "ngx-clipboard": "^16.0.0",
     "ngx-toastr": "^17.0.1",
+    "ngx-ui-switch": "^14.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
